--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,8 +11,8 @@
   margin-bottom: 10px;
   max-width: 100%;
 
-  position: absolute;
-  top: 1px;
+  position: fixed;
+  top: -1px;
   z-index: 100;
   width: 100%;
 
