--- a/src/styles.css
+++ b/src/styles.css
@@ -122,5 +122,9 @@ html,
 
 .container {
   width: 100vw;
-  height: 100vh;
+
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
 }
