--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   padding: 2px 0 4px 0;
   /* background: #192032; */
   background: #19203261;
-  border-bottom: 1px solid rgb(0 119 255 / 37%);
+  /* border-bottom: 1px solid rgb(0 119 255 / 37%); */
   display: flex;
   align-items: center;
   border-radius: 0 0 30px 30px;
